More helpers and work in view/index

--- a/blender-today/application/static/sass/_helpers.sass
+++ b/blender-today/application/static/sass/_helpers.sass
@@ -94,3 +94,14 @@ $screen-md-max: $screen-lg-min - 1
 	-ms-transform: translateY(-50%)
 	-o-transform: translateY(-50%)
 	transform: translateY(-50%)
+
+.disabled
+	opacity: 0.65 !important
+	pointer-events: none !important
+	+user-select-none
+
+.user-select-none
+	+user-select-none
+
+.pointer-events-none
+	+pointer-events-none
