--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -8,7 +8,7 @@
 		<div class="row post-index-item">
 			<div class="col-md-1">
 				<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-					<div class="post-index-item-type" title="{{post.rating.positive}} Upvotes, {{post.rating.negative}} Downvotes">
+					<div class="post-index-item-type" title="{{post.rating.positive}} Upvotes, {{post.rating.negative}} Downvotes" {% if post.picture %}style="background: url(http://i.imgur.com/{{post.picture}}s.jpg) top left no-repeat"{% endif %}>
 						{% if post.post_type.url == 'link' %}
 							<i class="fa fa-link"></i>
 						{% elif post.post_type.url == 'text' %}
@@ -19,7 +19,7 @@
 			</div>
 			<div class="col-md-11">
 				<a class="post-index-item-title" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-					{% if post.picture %}<i class="fa fa-picture-o"></i>{% endif %}
+					{% if post.picture %}<i class="fa fa-picture-o"></i> {% endif %}
 					{{post.title}}
 				</a>
 				<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
