--- a/blender-today/application/templates/posts/submit.html
+++ b/blender-today/application/templates/posts/submit.html
@@ -4,34 +4,36 @@
 
 {% block body %}
 <div class="col-md-9">
-	<form role="form" method="POST" enctype="multipart/form-data" action="{{url_for('posts.submit')}}">
-		{{ form.hidden_tag() }}
-		<div class="form-group">
-			{#{{ form.title.label }}#}
-			{{ form.title(class='form-control', placeholder='Title') }}
-			{% if form.title.errors %}
-				<ul class="error">
-					{% for error in form.title.errors %}<li>{{ error }}</li>{% endfor %}
-				</ul>
-			{% endif %}
-		</div>
-		<div class="form-group">
-			{{ form.post_type_id.label() }}
-			{{ form.post_type_id(class='form-control') }}
-		</div>
-		<div class="form-group">
-			{{ form.category_id.label() }}
-			{{ form.category_id(class='form-control') }}
-		</div>
-		<div class="form-group">
-			{{ form.content(class='form-control', id='post_content') }}
-		</div>
-		<div class="form-group">
-			{{ form.picture(class='form-control') }}
-		</div>
-		<button type="submit" class="btn btn-default btn-block btn-squishy btn-success submit" value="Go">
-			<i class="fa fa-check"></i> Submit </button>
-	</form>
+	<div class="post-submit">
+		<form role="form" method="POST" enctype="multipart/form-data" action="{{url_for('posts.submit')}}">
+			{{ form.hidden_tag() }}
+			<div class="form-group">
+				{#{{ form.title.label }}#}
+				{{ form.title(class='form-control', placeholder='Title') }}
+				{% if form.title.errors %}
+					<ul class="error">
+						{% for error in form.title.errors %}<li>{{ error }}</li>{% endfor %}
+					</ul>
+				{% endif %}
+			</div>
+			<div class="form-group">
+				{{ form.post_type_id.label() }}
+				{{ form.post_type_id(class='form-control') }}
+			</div>
+			<div class="form-group">
+				{{ form.category_id.label() }}
+				{{ form.category_id(class='form-control') }}
+			</div>
+			<div class="form-group">
+				{{ form.content(class='form-control', id='post_content') }}
+			</div>
+			<div class="form-group">
+				{{ form.picture(class='form-control') }}
+			</div>
+			<button type="submit" class="btn btn-default btn-block btn-squishy btn-success submit" value="Go">
+				<i class="fa fa-check"></i> Submit </button>
+		</form>
+	</div> <!-- post-submit -->
 </div>
 {% endblock %}
 
