Dont disable if voted

--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -23,10 +23,10 @@
 	{% endif %}
 
 	<div class="post-view-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-		<a class="post-view-rate up{% if post.user_rating and post.user_rating.is_positive %} rated disabled{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote">
+		<a class="post-view-rate up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote">
 			<i class="fa fa-arrow-up"></i>
 		</a>
-		<a class="post-view-rate down{% if post.user_rating and not post.user_rating.is_positive %} rated disabled{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote">
+		<a class="post-view-rate down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote">
 			<i class="fa fa-arrow-down"></i>
 		</a>
 		<span class="separator"></span>
