Bring the right images for index and view

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -101,6 +101,8 @@ p
 
 .post-view-content-image
 	padding: 5px 15px 10px 15px
+	& img
+		max-width: 100%
 	&:hover .post-view-content-image-link
 		color: $color_brand_main
 		text-decoration: none !important
