--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -50,12 +50,24 @@ p
 	display: block
 	font-size: 1.6em
 	padding: 15px 0 3px 5px
+	+media-xs
+		padding-left: 0
+	+media-md
+		padding-left: 15px
+	+media-lg
+		padding-left: 5px
 
 .post-index-item-details
 	display: block
 	font-size: 0.9em
-	padding: 3px 0 15px 5px
 	color: lighten($color_text, 10%)
+	padding: 3px 0 15px 5px
+	+media-xs
+		padding-left: 0
+	+media-md
+		padding-left: 15px
+	+media-lg
+		padding-left: 5px
 
 .post-index-item-rate
 	padding: 5px
@@ -72,7 +84,7 @@ p
 	font-size: 1.8em
 	width: 60px
 	height: 60px
-	margin: 12px 0 0 0px
+	margin: 12px 0 0 0
 	color: white
 	background-color: lighten($color_text, 50%)
 	text-align: center
@@ -81,6 +93,9 @@ p
 	& i
 		top: 40%
 		@extend .vertical-align
+
+	+media-xs
+		margin-left: 10px
 
 /* //post-index */
 /* post-view */
