--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -6,7 +6,7 @@
 	<div class="col-md-9">
 		{% for post in posts %}
 		<div class="row post-index-item">
-			<div class="col-md-1">
+			<div class="col-md-1 col-sm-1 col-xs-2">
 				<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
 					<div class="post-index-item-type" title="{{post.rating.positive}} Upvotes, {{post.rating.negative}} Downvotes" {% if post.picture %}style="background: url({{post.thumbnail('s')}}) top left no-repeat"{% endif %}>
 						{% if post.post_type.url == 'link' %}
@@ -17,7 +17,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-md-11">
+			<div class="col-md-11 col-sm-11 col-xs-10">
 				<a class="post-index-item-title" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
 					{% if post.picture %}<i class="fa fa-picture-o"></i> {% endif %}
 					{{post.title}}
