Posts Index: expand image

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -69,6 +69,19 @@ p
 	+media-lg
 		padding-left: 5px
 
+.post-index-item-picture
+	display: none
+	min-width: 300px
+	max-width: 100%
+	opacity: 0
+	margin: 20px 0 10px 0
+	&:active
+		cursor: nwse-resize
+
+.post-index-item-picture-expand
+	cursor: pointer
+	color: lighten($color_text, 30%)
+
 .post-index-item-rate
 	padding: 5px
 	color: lighten($color_text, 30%)
