--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -23,10 +23,10 @@
 					{{post.title}}
 				</a>
 				<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-					<a class="post-index-item-rate up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}">
+					<a class="post-index-item-rate up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote">
 						<i class="fa fa-arrow-up"></i>
 					</a>
-					<a class="post-index-item-rate down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}">
+					<a class="post-index-item-rate down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote">
 						<i class="fa fa-arrow-down"></i>
 					</a>
 					<span class="separator"></span>
@@ -38,10 +38,41 @@
 					<span class="separator"></span>
 					{{post.pretty_creation_date}}
 					<small>by</small> {{post.user.first_name}} {{post.user.last_name}}
+					{% if post.picture %}
+					<span class="post-index-item-picture-expand"><i class="fa fa-plus"></i></span>
+					<img class="post-index-item-picture" data-rel="{{post.thumbnail('m')}}"  src=""/>
+					{% endif %}
 				</div>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
 </div>
+{% endblock %}
+
+{% block footer_scripts %}
+<script type="text/javascript">
+	$('.post-index-item-picture-expand').click(function(){
+		$(this).next().attr('src', $(this).next().data('rel'));
+		$(this).next().css('display', 'block');
+		$(this).next().animate({'opacity': 1.0});
+	});
+
+	$('.post-index-item-picture').mousedown(function(e){
+		e.preventDefault();
+
+		image = $(this);
+
+		$(document).mousemove(function(e){
+			e.preventDefault();
+			var x = ((e.pageX - image.parent().offset().left) + (image.width())) * 0.6;
+			$(image).css("width", x);
+		})
+	});
+
+	$(document).mouseup(function(e){
+		$(document).unbind('mousemove');
+	});
+
+</script>
 {% endblock %}
