--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -23,10 +23,10 @@
 					{{post.title}}
 				</a>
 				<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-					<a class="post-index-item-rate up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote">
+					<a class="post-index-item-rate up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote, click again to undo">
 						<i class="fa fa-arrow-up"></i>
 					</a>
-					<a class="post-index-item-rate down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote">
+					<a class="post-index-item-rate down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote, click again to undo">
 						<i class="fa fa-arrow-down"></i>
 					</a>
 					<span class="separator"></span>
@@ -39,8 +39,9 @@
 					{{post.pretty_creation_date}}
 					<small>by</small> {{post.user.first_name}} {{post.user.last_name}}
 					{% if post.picture %}
+					<span class="separator"></span>
 					<span class="post-index-item-picture-expand"><i class="fa fa-plus"></i></span>
-					<img class="post-index-item-picture" data-rel="{{post.thumbnail('m')}}"  src=""/>
+					<img class="post-index-item-picture" data-rel="{{post.thumbnail('l')}}"  src=""/>
 					{% endif %}
 				</div>
 			</div>
