Index and Comments, show the actual date (not pretty) on mouse hover

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -180,11 +180,23 @@ p
 
 .post-view-comments-item-content
 	padding: 0 0 15px 10px
+	+media-xs
+		padding-left: 0
+	+media-md
+		padding-left: 15px
+	+media-lg
+		padding-left: 10px
 
 .post-view-comments-item-details
 	display: block
 	padding: 0 0 0 10px
 	color: lighten($color_text, 10%)
+	+media-xs
+		padding-left: 0
+	+media-md
+		padding-left: 15px
+	+media-lg
+		padding-left: 5px
 
 .post-view-comments-item-rate
 	padding: 5px
