--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -34,7 +34,7 @@
 		<span class="separator"></span>
 		{{post.post_type}}
 		<span class="separator"></span>
-		{{post.pretty_creation_date}}
+		<span title="{{post.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{post.pretty_creation_date}}</span>
 		<small>by</small> {{post.user.first_name}} {{post.user.last_name}}
 		<span class="separator"></span>
 		<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
@@ -50,10 +50,10 @@
 				<a name="comment-{{comment.id}}"></a>
 				<div class="post-view-comments-item">
 					<div class="row">
-						<div class="col-md-1">
+						<div class="col-md-1 col-sm-1 col-xs-2">
 							<img class="img-circle" src="{{comment.user.gravatar()}}">
 						</div>
-						<div class="col-md-11">
+						<div class="col-md-11 col-sm-11 col-xs-10">
 							<div class="post-view-comments-item-content">
 								{{comment.content|safe}}
 							</div>
@@ -67,7 +67,7 @@
 								<span class="separator"></span>
 								{{comment.rating.positive - comment.rating.negative}}
 								<span class="separator"></span>
-								{{comment.pretty_creation_date}}
+								<span title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{comment.pretty_creation_date}}</span>
 								<small>by</small> {{comment.user.first_name}} {{comment.user.last_name}}
 								<span class="separator"></span>
 								<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}#comment-{{comment.id}}"><i class="fa fa-link"></i></a>
