Anchor for comments in index, and fix broken odd-even style in comments

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -172,7 +172,7 @@ p
 	padding: 15px 15px 25px 15px
 	margin: 0
 	border-top: thin solid lighten($color_text, 60%)
-	&:nth-child(even)
+	&.odd
 		background-color: darken(white, 5%)
 	&.reply
 		padding-left: 80px
