Posts Index: Voting is now on the side

--- a/blender-today/application/static/sass/_helpers.sass
+++ b/blender-today/application/static/sass/_helpers.sass
@@ -105,3 +105,8 @@ $screen-md-max: $screen-lg-min - 1
 
 .pointer-events-none
 	+pointer-events-none
+
+.text-overflow-ellipsis
+	overflow: hidden
+	white-space: nowrap
+	text-overflow: ellipsis
