--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -104,7 +104,7 @@
       <div class="container">
         <span class="pull-right">
           <p>
-            Blender Today
+            <a href="{{url_for('index')}}">Blender Today</a>
             <a href="#hop"><i class="fa fa-caret-up"></i></a>
           </p>
         </span>
